<resources>
    <string name="app_name">mappe2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_name_req">Name</string>
    <string name="contact_number_req">phone number</string>
    <string name="appointment_name_req">Appointment name</string>
    <string name="appointment_place_req">place</string>
    <string name="appointment_time_req">Time (dd/mm/yyyy hh:mm)</string>
    <string name="appointment_contact_req">Contact id</string>
    <string name="appointment_message_req">Message to contact</string>
    <string name="save_action">Save contact</string>
    <string name="save_appointment">Save appointment</string>
    <string name="add_new_item">Add new Contact</string>
    <string name="create_appointment">Create new appointment</string>
    <string name="delete">Delete contact</string>
    <string name="delete_appointment">Delete appointment</string>
    <string name="edit_contact">Edit contact</string>
    <string name="edit_appointment">Edit appointment</string>
    <string name="delete_question">Are you sure you want to delete this contact?</string>
    <string name="delete_appointment_question">Are you sure you want to delete this appointment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="appointments">Appointments</string>
    <string name="contacts">Contacts</string>
    <string name="reminders">Reminders</string>
</resources>
